XL-toolchain/src/main/java/it/uniroma2/netprog/xtrac/parser/xtraParser.java
// Generated from /home/giacomo/IdeaProjects/xtrac/src/main/java/resources/xtra.g4 by ANTLR 4.7
package it.uniroma2.netprog.xtrac.parser;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class xtraParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		WS=1, COMMENT=2, LINE_COMMENT=3, GLOBAL_MODIFIER=4, INITIAL_MODIFIER=5, 
		REGISTER_DEF_KEYWORD=6, CONSTANT_DEF_KEYWORD=7, STATE_DEF_KEYWORD=8, CUSTOM_DEF_EVENT_KEYWORD=9, 
		MACRO_ACTION_DEF_KEYWORD=10, STAGE_DEF_KEYWORD=11, PACKET_FIELD_KEYWORD=12, 
		CONDITIONS_KEYWORD=13, EVENT_KEYWORD=14, SERIAL_KEYWORD=15, FILE_IMPORT=16, 
		IPV6_ADDR=17, IPV4_ADDR=18, MAC_ADDR=19, HEX_INTEGER=20, DECIMAL_INTEGER=21, 
		ID=22, INDEX=23, FILENAME=24, NOT_ZERO_OCTET=25, OCTET=26, LS32=27, HEX_16=28, 
		COLON=29, DOUBLE_COLON=30, DQUOTES=31, DOT=32, ASSIGNMENT=33, PLUS=34, 
		MINUS=35, MUL=36, DIV=37, MOD=38, MAX=39, MIN=40, COMMA=41, EQ=42, LEQ=43, 
		GEQ=44, NEQ=45, GRET=46, LESS=47, LPARENT=48, RPARENT=49, LBRACE=50, RBRACE=51, 
		LBRACK=52, RBRACK=53, SEMICOLON=54, SPACE=55, HEX_LITERAL=56, HEX_DIGIT=57, 
		LETTER=58, DIGIT=59;
	public static final int
		RULE_program = 0, RULE_stage_program = 1, RULE_state_program = 2, RULE_macro_action_definition = 3, 
		RULE_custom_event_definition = 4, RULE_stage_statement = 5, RULE_stage_body = 6, 
		RULE_state_statement = 7, RULE_state_body = 8, RULE_event_statement = 9, 
		RULE_event_body = 10, RULE_condition_statement = 11, RULE_condition_body = 12, 
		RULE_condition = 13, RULE_body = 14, RULE_serial = 15, RULE_action = 16, 
		RULE_call = 17, RULE_assignment = 18, RULE_expr = 19, RULE_term = 20, 
		RULE_index_access = 21, RULE_field_elem = 22, RULE_identifier = 23, RULE_file_import = 24, 
		RULE_file_name = 25, RULE_packet_field_definition = 26, RULE_packet_field_entry = 27, 
		RULE_register_definition = 28, RULE_constant_definition = 29, RULE_const_assignement = 30, 
		RULE_integer = 31, RULE_addr = 32;
	public static final String[] ruleNames = {
		"program", "stage_program", "state_program", "macro_action_definition", 
		"custom_event_definition", "stage_statement", "stage_body", "state_statement", 
		"state_body", "event_statement", "event_body", "condition_statement", 
		"condition_body", "condition", "body", "serial", "action", "call", "assignment", 
		"expr", "term", "index_access", "field_elem", "identifier", "file_import", 
		"file_name", "packet_field_definition", "packet_field_entry", "register_definition", 
		"constant_definition", "const_assignement", "integer", "addr"
	};

	private static final String[] _LITERAL_NAMES = {
		null, null, null, null, "'global'", "'initial'", "'Register'", "'Constant'", 
		"'State'", "'Event'", "'Action'", "'Stage'", "'PacketField'", "'if'", 
		"'on'", "'serial'", "'import'", null, null, null, null, null, null, null, 
		null, null, null, null, null, "':'", null, "'\"'", "'.'", "'='", "'+'", 
		"'-'", "'*'", "'/'", "'%'", "'max'", "'min'", "','", "'=='", "'<='", "'>='", 
		"'!='", "'>'", "'<'", "'('", "')'", "'{'", "'}'", "'['", "']'", "';'", 
		"' '"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, "WS", "COMMENT", "LINE_COMMENT", "GLOBAL_MODIFIER", "INITIAL_MODIFIER", 
		"REGISTER_DEF_KEYWORD", "CONSTANT_DEF_KEYWORD", "STATE_DEF_KEYWORD", "CUSTOM_DEF_EVENT_KEYWORD", 
		"MACRO_ACTION_DEF_KEYWORD", "STAGE_DEF_KEYWORD", "PACKET_FIELD_KEYWORD", 
		"CONDITIONS_KEYWORD", "EVENT_KEYWORD", "SERIAL_KEYWORD", "FILE_IMPORT", 
		"IPV6_ADDR", "IPV4_ADDR", "MAC_ADDR", "HEX_INTEGER", "DECIMAL_INTEGER", 
		"ID", "INDEX", "FILENAME", "NOT_ZERO_OCTET", "OCTET", "LS32", "HEX_16", 
		"COLON", "DOUBLE_COLON", "DQUOTES", "DOT", "ASSIGNMENT", "PLUS", "MINUS", 
		"MUL", "DIV", "MOD", "MAX", "MIN", "COMMA", "EQ", "LEQ", "GEQ", "NEQ", 
		"GRET", "LESS", "LPARENT", "RPARENT", "LBRACE", "RBRACE", "LBRACK", "RBRACK", 
		"SEMICOLON", "SPACE", "HEX_LITERAL", "HEX_DIGIT", "LETTER", "DIGIT"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "xtra.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public xtraParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ProgramContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(xtraParser.EOF, 0); }
		public Stage_programContext stage_program() {
			return getRuleContext(Stage_programContext.class,0);
		}
		public State_programContext state_program() {
			return getRuleContext(State_programContext.class,0);
		}
		public List<Packet_field_definitionContext> packet_field_definition() {
			return getRuleContexts(Packet_field_definitionContext.class);
		}
		public Packet_field_definitionContext packet_field_definition(int i) {
			return getRuleContext(Packet_field_definitionContext.class,i);
		}
		public List<File_importContext> file_import() {
			return getRuleContexts(File_importContext.class);
		}
		public File_importContext file_import(int i) {
			return getRuleContext(File_importContext.class,i);
		}
		public List<Constant_definitionContext> constant_definition() {
			return getRuleContexts(Constant_definitionContext.class);
		}
		public Constant_definitionContext constant_definition(int i) {
			return getRuleContext(Constant_definitionContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof xtraListener ) ((xtraListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof xtraListener ) ((xtraListener)listener).exitProgram(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(71);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << CONSTANT_DEF_KEYWORD) | (1L << PACKET_FIELD_KEYWORD) | (1L << FILE_IMPORT))) != 0)) {
				{
				setState(69);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case PACKET_FIELD_KEYWORD:
					{
					setState(66);
					packet_field_definition();
					}
					break;
				case FILE_IMPORT:
					{
					setState(67);
					file_import();
					}
					break;
				case CONSTANT_DEF_KEYWORD:
					{
					setState(68);
					constant_definition();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(73);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(76);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				{
				setState(74);
				stage_program();
				}
				break;
			case 2:
				{
				setState(75);
				state_program();
				}
				break;
			}
			setState(78);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Stage_programContext extends ParserRuleContext {
		public List<Register_definitionContext> register_definition() {
			return getRuleContexts(Register_definitionContext.class);
		}
		public Register_definitionContext register_definition(int i) {
			return getRuleContext(Register_definitionContext.class,i);
		}
		public List<Custom_event_definitionContext> custom_event_definition() {
			return getRuleContexts(Custom_event_definitionContext.class);
		}
		public Custom_event_definitionContext custom_event_definition(int i) {
			return getRuleContext(Custom_event_definitionContext.class,i);
		}
		public List<Macro_action_definitionContext> macro_action_definition() {
			return getRuleContexts(Macro_action_definitionContext.class);
		}
		public Macro_action_definitionContext macro_action_definition(int i) {
			return getRuleContext(Macro_action_definitionContext.class,i);
		}
		public List<Stage_statementContext> stage_statement() {
			return getRuleContexts(Stage_statementContext.class);
		}
		public Stage_statementContext stage_statement(int i) {
			return getRuleContext(Stage_statementContext.class,i);
		}
		public Stage_programContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stage_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof xtraListener ) ((xtraListener)listener).enterStage_program(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof xtraListener ) ((xtraListener)listener).exitStage_program(this);
		}
	}

	public final Stage_programContext stage_program() throws RecognitionException {
		Stage_programContext _localctx = new Stage_programContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_stage_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(85);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << REGISTER_DEF_KEYWORD) | (1L << CUSTOM_DEF_EVENT_KEYWORD) | (1L << MACRO_ACTION_DEF_KEYWORD))) != 0)) {
				{
				setState(83);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case REGISTER_DEF_KEYWORD:
					{
					setState(80);
					register_definition();
					}
					break;
				case CUSTOM_DEF_EVENT_KEYWORD:
					{
					setState(81);
					custom_event_definition();
					}
					break;
				case MACRO_ACTION_DEF_KEYWORD:
					{
					setState(82);
					macro_action_definition();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(87);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(89); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(88);
				stage_statement();
				}
				}
				setState(91); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==STAGE_DEF_KEYWORD );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class State_programContext extends ParserRuleContext {
		public List<Register_definitionContext> register_definition() {
			return getRuleContexts(Register_definitionContext.class);
		}
		public Register_definitionContext register_definition(int i) {
			return getRuleContext(Register_definitionContext.class,i);
		}
		public List<Custom_event_definitionContext> custom_event_definition() {
			return getRuleContexts(Custom_event_definitionContext.class);
		}
		public Custom_event_definitionContext custom_event_definition(int i) {
			return getRuleContext(Custom_event_definitionContext.class,i);
		}
		public List<Macro_action_definitionContext> macro_action_definition() {
			return getRuleContexts(Macro_action_definitionContext.class);
		}
		public Macro_action_definitionContext macro_action_definition(int i) {
			return getRuleContext(Macro_action_definitionContext.class,i);
		}
		public List<State_statementContext> state_statement() {
			return getRuleContexts(State_statementContext.class);
		}
		public State_statementContext state_statement(int i) {
			return getRuleContext(State_statementContext.class,i);
		}
		public State_programContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_state_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof xtraListener ) ((xtraListener)listener).enterState_program(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof xtraListener ) ((xtraListener)listener).exitState_program(this);
		}
	}

	public final State_programContext state_program() throws RecognitionException {
		State_programContext _localctx = new State_programContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_state_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(98);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << REGISTER_DEF_KEYWORD) | (1L << CUSTOM_DEF_EVENT_KEYWORD) | (1L << MACRO_ACTION_DEF_KEYWORD))) != 0)) {
				{
				setState(96);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case REGISTER_DEF_KEYWORD:
					{
					setState(93);
					register_definition();
					}
					break;
				case CUSTOM_DEF_EVENT_KEYWORD:
					{
					setState(94);
					custom_event_definition();
					}
					break;
				case MACRO_ACTION_DEF_KEYWORD:
					{
					setState(95);
					macro_action_definition();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(100);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(102); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(101);
				state_statement();
				}
				}
				setState(104); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==STATE_DEF_KEYWORD );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Macro_action_definitionContext extends ParserRuleContext {
		public TerminalNode MACRO_ACTION_DEF_KEYWORD() { return getToken(xtraParser.MACRO_ACTION_DEF_KEYWORD, 0); }
		public IdentifierContext identifier() {
			return getRuleContext(IdentifierContext.class,0);
		}
		public TerminalNode LBRACE() { return getToken(xtraParser.LBRACE, 0); }
		public BodyContext body() {
			return getRuleContext(BodyContext.class,0);
		}
		public TerminalNode RBRACE() { return getToken(xtraParser.RBRACE, 0); }
		public Macro_action_definitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_macro_action_definition; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof xtraListener ) ((xtraListener)listener).enterMacro_action_definition(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof xtraListener ) ((xtraListener)listener).exitMacro_action_definition(this);
		}
	}

	public final Macro_action_definitionContext macro_action_definition() throws RecognitionException {
		Macro_action_definitionContext _localctx = new Macro_action_definitionContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_macro_action_definition);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(106);
			match(MACRO_ACTION_DEF_KEYWORD);
			setState(107);
			identifier();
			setState(108);
			match(LBRACE);
			setState(109);
			body();
			setState(110);
			match(RBRACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Custom_event_definitionContext extends ParserRuleContext {
		public TerminalNode CUSTOM_DEF_EVENT_KEYWORD() { return getToken(xtraParser.CUSTOM_DEF_EVENT_KEYWORD, 0); }
		public IdentifierContext identifier() {
			return getRuleContext(IdentifierContext.class,0);
		}
		public TerminalNode ASSIGNMENT() { return getToken(xtraParser.ASSIGNMENT, 0); }
		public List<ConditionContext> condition() {
			return getRuleContexts(ConditionContext.class);
		}
		public ConditionContext condition(int i) {
			return getRuleContext(ConditionContext.class,i);
		}
		public TerminalNode SEMICOLON() { return getToken(xtraParser.SEMICOLON, 0); }
		public List<TerminalNode> COMMA() { return getTokens(xtraParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(xtraParser.COMMA, i);
		}
		public Custom_event_definitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_custom_event_definition; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof xtraListener ) ((xtraListener)listener).enterCustom_event_definition(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof xtraListener ) ((xtraListener)listener).exitCustom_event_definition(this);
		}
	}

	public final Custom_event_definitionContext custom_event_definition() throws RecognitionException {
		Custom_event_definitionContext _localctx = new Custom_event_definitionContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_custom_event_definition);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(112);
			match(CUSTOM_DEF_EVENT_KEYWORD);
			setState(113);
			identifier();
			setState(114);
			match(ASSIGNMENT);
			setState(115);
			condition();
			setState(120);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(116);
				match(COMMA);
				setState(117);
				condition();
				}
				}
				setState(122);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(123);
			match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Stage_statementContext extends ParserRuleContext {
		public TerminalNode STAGE_DEF_KEYWORD() { return getToken(xtraParser.STAGE_DEF_KEYWORD, 0); }
		public IdentifierContext identifier() {
			return getRuleContext(IdentifierContext.class,0);
		}
		public Stage_bodyContext stage_body() {
			return getRuleContext(Stage_bodyContext.class,0);
		}
		public Stage_statementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stage_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof xtraListener ) ((xtraListener)listener).enterStage_statement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof xtraListener ) ((xtraListener)listener).exitStage_statement(this);
		}
	}

	public final Stage_statementContext stage_statement() throws RecognitionException {
		Stage_statementContext _localctx = new Stage_statementContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_stage_statement);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(125);
			match(STAGE_DEF_KEYWORD);
			setState(126);
			identifier();
			setState(127);
			stage_body();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
